syntax = "proto3";
package services;

message EmptyReq {}

message ServiceResp {
  int64 request_id = 1;
  int64 status = 2;
  string message = 3;
}

message StartConfig {
  int64 mem_alloc = 1;
}

message StatusResp {
  string server_state = 1;
  string message = 2;
}

service LauncherService {
  rpc Start(StartConfig) returns (ServiceResp) {}
  rpc Stop(EmptyReq) returns (ServiceResp) {}
  rpc Status(EmptyReq) returns (StatusResp) {}
}
